--- a/scss/_fullBanner.scss
+++ b/scss/_fullBanner.scss
@@ -19,6 +19,8 @@
           padding-top: 40px;
           color: $color_w;
           letter-spacing: 3px;
+          @include verticalTruncate();
+          	
         }
 
         h2,
@@ -28,12 +30,15 @@
           line-height: 150%;
           margin-bottom: 50px;
           color: $color_w;
+          @include verticalTruncate();
         }
     }
 }
 
 .backgroundBanner{
-    margin: -20%;
+    //margin: -20%; 
+    min-width: 100%;
+    margin: -5%;
     position: absolute;
 }
 
